# SolidAutomate

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/core/: index.md
docs/gui/: index.md
docs/utils/: index.md
src/solid_automate/: __init__.py  main.py  setup.py
src/solid_automate/core/: __init__.py  solidworks_service.py
src/solid_automate/core/sw_tools/: sw_tools.py
src/solid_automate/gui/: __init__.py  main_window.py
src/solid_automate/gui/ui/: solid_automate.ui
tests/: test_solidworks_service.py
tests/test_3d_models/: M9X50.SLDPRT  metal_gi2.SLDPRT  sw_tol1.SLDPRT  sw_tol_blacha.SLDDRW
