[project]
name = "solidautomate"
version = "0.1.0"
description = ""
authors = [
    {name = "kowaliczek_256",email = "kowalik.piotr256@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<=3.14"

[tool.poetry.dependencies]
mkdocs = "1.6.1"
mkdocs-material = "9.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
