[project]
name = "solidautomate"
version = "0.1.0"
description = ""
authors = [
    { name = "kowaliczek_256", email = "kowalik.piotr256@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<=3.14"

[tool.poetry.dependencies]
mkdocs = "1.6.1"
mkdocs-material = "9.7.2"
mkdocstrings-python = "2.0.3"
mkdocstrings = "1.0.3"
pylint = "4.0.5"
pyside6 = "6.10.2"
yapf = "0.43.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
COLUMN_LIMIT = 120
COALESCE_BRACKETS = true
DEDENT_CLOSING_BRACKETS = true
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = false
SPLIT_BEFORE_NAMED_ASSIGNS = false